[KNOWAGE-5876] Delete references to sun.misc.BASE64*
Replace references to sun.misc.BASE64* with java.util.Base64

See KNOWAGE-5877
# Conflicts:
#	knowage-core/src/main/java/it/eng/spagobi/api/v2/LovResource.java
#	knowagejasperreportengine/src/main/java/it/eng/spagobi/engines/jasperreport/JasperReportRunner.java